k8s/coma/apps/koel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: koel
  namespace: koel
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "koel.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: koel
                port:
                  number: 80
  tls:
    - hosts:
        - "koel.artichoke.cc"
      secretName: tls-secret
